Tue Feb 16 05:27:48 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Inside get_city_zone(), when looking for correct data section, also
	look for four digits which is the year which is always in the date line of
	the section.  Without this date, we'll consider the forecast invalid.  Any help?

Thu Feb 11 19:26:02 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm, Makefile.PL, README:
	Fixed Makefile.PL to install in correct place, and check for packages
	Added listserv info

Tue Feb  9 20:25:57 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Added MaxItems to make_noaa_table()

Sun Feb  7 04:27:55 1999  msolomon  <msolomon@fido.seva.net>

	* test.pl: Fixed WeatherNOAA to be Geo::WeatherNOAA

Sat Feb  6 04:04:44 1999  msolomon  <msolomon@fido.seva.net>

	* examples/wx.cgi, examples/simple2.pl, examples/hash.pl, examples/simple.pl, README, WeatherNOAA.pm, t.pl, MANIFEST:
	added examples, added print_*()

	* WeatherNOAA.pm: Corrected Home URL

	* WeatherNOAA.pm: Tweak on error reporting

	* WeatherNOAA.pm: Added better error reporting

	* WeatherNOAA.pm: Added Geo::

Wed Feb  3 21:05:13 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm:
	Check for existance of $line as well before unpack'ing
	Assume 'get' as fileopt in make_noaa_table

Mon Jan 25 16:09:39 1999  msolomon  <msolomon@fido.seva.net>

	* t.pl, WeatherNOAA.pm:
	Last fix broke warnings, but added if block to correct

	* WeatherNOAA.pm:
	Changed split to regexp when parsing for key/value pairs
	(they use ... inside a forecast)

Wed Jan 20 04:44:04 1999  msolomon  <msolomon@fido.seva.net>

	* WeatherNOAA.pm: Added proxy support and fixed docs

	* test.pl: Added test funcs

	* WeatherNOAA.pm:
	Added main:: independent defaults for colors in make_noaa_table()

Mon Jan 18 08:55:01 1999  msolomon  <msolomon@fido.seva.net>

	* t.pl, WeatherNOAA.pm:
	Added return to empty ref if city hourly has NOT AVBL

	* WeatherNOAA.pm: