@@ -1,4 +1,4 @@
-$Id: README,v 1.5 1999/02/11 19:26:01 msolomon Exp $
+$Id: README,v 1.6 1999/02/17 17:39:02 msolomon Exp $
 
 ----------
 IMPORTANT!
